# occt-common

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json  xmake.lua
.github/workflows/: cmake.yml
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  package  references  toolchain
cmake/: FetchGTest.cmake
include/OcctCommon/: Math.h  OcctCommon.h  OcctMath.h  _decl.h  pch.h
include/OcctCommon/Geometry/: Arc.h  ArcCurve.h  BoundingBox.h  Box.h  Brep.h  Circle.h  ComponentIndex.h  Curve.h  CurveUtil.h  Ellipse.h  GeometryBase.h  Interval.h  Line.h  LineCurve.h  NurbsCurve.h  Plane.h  Point3d.h  PolyCurve.h  Polyline.h  PolylineCurve.h  Quaternion.h  Rectangle3d.h  Transform.h  Vector3d.h
include/OcctCommon/Geometry/Intersect/: Intersection.h
include/OcctCommon/Geometry/detail/: CurveUtil.inl
src/: CMakeLists.txt  Circle.cpp  Curve.cpp  CurveUtil.cpp  Interval.cpp  Line.cpp  Math.cpp  NurbsCurve.cpp  OcctMath.cpp  Plane.cpp  Point3d.cpp  PolyCurve.cpp  Transform.cpp  Vector3d.cpp  occt_common.cpp
src/Geometry/: Point3d.cpp
tests/: CMakeLists.txt  Coord_Test.cpp  Coord_Test.h  Point3d_Test.h  test.cpp
